# self_supervised_learning_test

./: .gitignore  README.md  git_push.bat
BYOL/: Supervised_Training_512_aug_byol-pytorch_seresnext50_32x4d_512.ipynb  byol-pytorch_seresnext50_32x4d.ipynb  byol-pytorch_seresnext50_32x4d_512.ipynb  byol-pytorch_seresnext50_32x4d_Supervised_Training_224.ipynb  byol-pytorch_seresnext50_32x4d_Supervised_Training_224_aug.ipynb  byol-pytorch_seresnext50_32x4d_Supervised_Training_512.ipynb
SwAV/: no-swav-resnet50-v2_local.ipynb  swav-tf-linear-evaluation_local.ipynb
env/: lightning.yml
env/tfgpu/: pyproject.toml
