[tool.poetry]
name = "tfgpu"
version = "0.1.0"
description = ""
authors = ["riron1206 <rironyokoi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow-gpu = "^2.3.1"
tensorflow-estimator = "^2.3.0"
tensorflow-addons = "^0.11.2"
tensorflow-hub = "^0.9.0"
tensorflow-gcs-config = "^2.3.0"
tensorflow-probability = "^0.11.1"
librosa = "^0.8.0"
pandas = "^1.1.3"
wave = "^0.0.2"
scikit-learn = "^0.23.2"
Pillow = "^8.0.0"
tqdm = "^4.50.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
jupyter = "^1.0.0"
black = "^20.8b1"
jupyter_contrib_nbextensions = "^0.5.1"
jupytext = "^1.6.0"
optuna = "^2.2.0"
pandas-profiling = "^2.9.0"
lightgbm = "^3.0.0"
adabelief-tf = "0.1.0"
xgboost = "^1.2.1"
category_encoders = "^2.2.2"
keras-tuner = "^1.0.1"
iterative-stratification = "^0.1.6"
kaggle = "^1.5.10"
openpyxl = "^3.0.5"
pycaret = "2.2.2"
tensorflow-datasets = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
